# app/llm/cmd/api/doc/swagger/llm.json
@@ -359,6 +359,88 @@
         }
       }
     },
+    "/llm/v1/chat/text": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "https"
+        ],
+        "summary": "进行文字对话",
+        "operationId": "chatTextChat",
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "X-User-Id",
+            "in": "header"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "configId",
+                "message"
+              ],
+              "properties": {
+                "autoFillHistory": {
+                  "type": "boolean"
+                },
+                "configId": {
+                  "type": "integer"
+                },
+                "conversationId": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "systemPrompt": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "conversationId": {
+                  "type": "string"
+                },
+                "messages": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "required": [
+                      "role",
+                      "content"
+                    ],
+                    "properties": {
+                      "content": {
+                        "type": "string"
+                      },
+                      "role": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/llm/v1/config/create": {
       "post": {
         "consumes": [
@@ -856,7 +938,7 @@
       }
     }
   },
-  "x-date": "2025-11-25 20:12:14",
+  "x-date": "2025-11-26 11:49:04",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
